# onnx2coreml

./: .gitignore  README.md  main.py  pyproject.toml
