[project]
name = "onnx2coreml"
version = "0.1.0"
description = "Convert onnx models to coreml"
readme = "README.md"
requires-python = "==3.9.6"
dependencies = [
    "coremltools==9.0",
    "onnx==1.19.1",
    "onnxsim==0.4.33",
    "onnx-graphsurgeon==0.5.8",
    "psutil==7.1.3",
    "sng4onnx==1.0.4",
    "tensorflow==2.20.0",
    "onnxruntime==1.19.2",
]
