[project]
name = "onnx2coreml"
version = "0.1.0"
description = "Convert onnx models to coreml"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "coremltools==9.0",
    "onnx==1.15.0",
    "onnxsim==0.4.33",
    "onnx-graphsurgeon==0.5.8",
    "psutil==7.1.3",
    "sng4onnx==1.0.4",
    "onnxruntime==1.19.2",
    "tensorflow-macos==2.12.0",
    "onnx2tf==1.20.0",
    "tf-keras==2.15.0",
]
